# libcli

./: Cargo.toml  README.md
src/: args.rs  config.rs  input.rs  lib.rs  main.rs
tests/: argument_parsing.rs
