[package]
name = "libcli"
version = "0.1.3"
license = "MIT"
authors = ["Tim Roberts <ten3roberts@gmail.com>"]
description = "A collection of utilities to help making command line based programs"
readme="README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
